# scorch-interpreter

./: -openglwinmain.rs  .gitignore  Cargo.toml  README.md  dump_to_output.sh  numbers.type  output.ll  parseable.scorch  proto.type  prototyping.scorch  stderr.txt  test.scorch  test_arithmetic.scorch  test_fields_vars_literal.scorch  test_functions.scorch  test_if_else.scorch  test_rel_expr.scorch
scorch_src/: main.scorch
scorch_src/demo/: print_fns.scorch  repl.scorch
scorch_src/ideas & documentation/: general.md  parseable.scorch  todo.md
scorch_src/std/: extensions.scorch
scorch_src/unit_tests/: arithmetic.scorch  arrays.scorch  equals.scorch  fields_vars_literals.scorch  functions.scorch  if_else.scorch  loops.scorch  relationals.scorch  structs.scorch  test_fields_vars_literal.scorch  test_functions.scorch  test_if_else.scorch  test_rel_expr.scorch  test_repeat.scorch
scripts/: ct_loc.sh  sterr_dump.sh
src/: __use_this_when_updating_lib_branch.rs  ast.rs  cli.rs  context.rs  expression.rs  interpreter.rs  lib.rs  main.rs  runtime.rs  standard_functions.rs  test.rs  tokens.rs  typechecker.rs  types.rs  util.rs
src/frontend/: ast.rs  mod.rs  parser.rs  tokens.rs
src/llvm/: context.rs  lowering.rs  mod.rs
src/runtime/: context.rs  expression.rs  interpreter.rs  mod.rs  std_builtins.rs  timewindow.rs  typechecker.rs  types.rs
