[package]
name = "scorch-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1.9.0"
scorch-parser = { git = "https://github.com/toolateralus/scorch-parser", branch = "master" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
inkwell_internals = "0.8.0"
libc = "0.2.151"
once_cell = "1.19.0"
parking_lot = "0.12.1"
regex = "1.10.2"
